[project]
name = "mcp-sampling-proxy"
version = "0.1.0"
description = "MCP proxy that bridges sampling/createMessage to claude -p"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.9.0",
    "httpx>=0.28.0",
]

[project.scripts]
mcp-sampling-proxy = "mcp_sampling_proxy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_sampling_proxy"]
